--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,23 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 
 /*BODY*/
 	body{
-
+		background-image: linear-gradient(#000,#00002e 35px,#00002e );
+		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 	}
-
+	figcaption{
+		display: none;
+	}
 /*TOPO*/
 	header.topo{
-		
+		margin: 0 auto;
+
+	}
+	header figure{
+		text-align: center;
+	}
+
+	header img{
+		max-height: 60px;
 	}
 
 /*RODAPÉ*/
