--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,29 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 
 /*BODY*/
 	body{
-		background-image: linear-gradient(#000,#00002e 35px,#00002e );
+		background-color: #00002e;
 		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+		color: #fff;
 	}
 	figcaption{
 		display: none;
 	}
+	ul figure{
+		text-align: center;
+		border: 1px solid transparent;
+	}
+	ul img{
+		width: 186px;
+	}
+
+	ul figure:hover{
+		border-color: #fff;
+	}
+
 /*TOPO*/
 	header.topo{
 		margin: 0 auto;
+		background-image: linear-gradient(#000,#00002e 35px,#00002e );
 
 	}
 	header figure{
@@ -39,11 +53,30 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 	header img{
 		max-height: 60px;
 	}
-
-/*RODAPÉ*/
+	.addPerfil figure{
+		width: 186px;
+		height: 186px;
+	}
+	.addPerfil img{
+		width: 50%;
+		height: 50%;
+		margin: 25%;
+	}
 	
 
 /*PÁGINA INICIAL*/
 	div.pg-home{
-		
+		text-align: center;
+
+	}
+	.pg-home header{
+		font-size: 2rem;
+		font-weight: 700;
+		margin: 50px auto;
+	}
+	ul{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		flex-wrap: wrap;
 	}
