--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 	ul figure{
 		text-align: center;
 		border: 1px solid transparent;
+		width: 186px;
+		height: 186px;
+
 	}
 	ul img{
 		width: 186px;
@@ -53,10 +56,6 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 	header img{
 		max-height: 60px;
 	}
-	.addPerfil figure{
-		width: 186px;
-		height: 186px;
-	}
 	.addPerfil img{
 		width: 50%;
 		height: 50%;
@@ -66,7 +65,9 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 
 /*PÁGINA INICIAL*/
 	div.pg-home{
+		margin: 0 auto;
 		text-align: center;
+		max-width: 858px;
 
 	}
 	.pg-home header{
