--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 	ul figure:hover{
 		border-color: #fff;
 	}
+	li {
+		margin: 10px;
+	}
+	li h3{
+		display: block;
+		margin: 20px;
+	}
 
 /*TOPO*/
 	header.topo{
@@ -67,8 +74,7 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 	div.pg-home{
 		margin: 0 auto;
 		text-align: center;
-		max-width: 858px;
-
+		max-width: 600px;
 	}
 	.pg-home header{
 		font-size: 2rem;
@@ -80,4 +86,27 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 		flex-direction: row;
 		justify-content: center;
 		flex-wrap: wrap;
+	}
+/* FOOTER */
+	button{
+		border: 1px solid#fff;
+		background-color: transparent;
+		color: #fff;
+		padding: 1em 2em;
+	}
+
+
+	@media (min-width: 850px) {
+		div.pg-home{
+			max-width: 858px;
+		}
+	}
+	@media (min-width: 768px) {
+		header figure{
+			text-align:left;
+		}
+		.pg-home header{
+			font-size: 3rem;
+		}		
+
 	}
